fix: 💄 adjusted image opacity on dark mode

--- a/src/pages/projects/styles/Lucky.module.scss
+++ b/src/pages/projects/styles/Lucky.module.scss
@@ -142,5 +142,9 @@
   .placeholder {
     color: #5d5497;
   }
+
+  .image {
+    opacity: 0.8;
+  }
 }
 
